# wanderlust

./: .gitignore  Cargo.toml  Dockerfile  dev.yaml  docker-compose.yml
app/: package.json  tsconfig.json  webpack.config.js
app/src/: index.tsx
docs/: technical_design.org
migrations/: 1_create_users.sql
src/: data.rs  lib.rs  main.rs  routes.rs
src/actions/: mod.rs  user.rs
src/auth/: google.rs  mod.rs  user.rs
src/views/: mod.rs
templates/: base.html  get-started.html  hello.html  home.html
