[package]
name = "wanderlust"
version = "0.1.0"
authors = ["Jordan Kaye <jordan.kaye2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
askama = "0.9.0"
dotenv = "0.15.0"
sqlx = { version = "0.3", default-features = false, features = [ "json", "macros", "postgres", "runtime-tokio", "tls", "uuid" ] }
tokio = { version = "0.2.21", features = ["macros"] }
warp = "0.2.3"
